# swagger.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.0",
   "info": {
     "title": "Ian Card",
-    "version": "1.0.0"
+    "version": "1.1.0"
   },
   "servers": [
     {
@@ -94,6 +94,10 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "Malformed payload",
+            "content": {}
           }
         }
       },
@@ -115,6 +119,10 @@
         "responses": {
           "201": {
             "description": "Success",
+            "content": {}
+          },
+          "400": {
+            "description": "Malformed payload",
             "content": {}
           }
         }
@@ -195,6 +203,10 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "Malformed payload",
+            "content": {}
           }
         }
       }
@@ -276,6 +288,10 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "Malformed payload",
+            "content": {}
           }
         }
       },
@@ -297,6 +313,10 @@
         "responses": {
           "201": {
             "description": "Sucess",
+            "content": {}
+          },
+          "400": {
+            "description": "Malformed payload",
             "content": {}
           }
         }
@@ -386,6 +406,10 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "Malformed payload",
+            "content": {}
           }
         }
       },
@@ -414,6 +438,10 @@
         "responses": {
           "201": {
             "description": "Sucess",
+            "content": {}
+          },
+          "400": {
+            "description": "Malformed payload",
             "content": {}
           }
         }
@@ -458,6 +486,10 @@
         "responses": {
           "201": {
             "description": "Sucess",
+            "content": {}
+          },
+          "400": {
+            "description": "Malformed payload",
             "content": {}
           }
         }
@@ -597,7 +629,38 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Card"
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "description": "Card Name"
+                  },
+                  "description": {
+                    "type": "string",
+                    "description": "Text that appears on card"
+                  },
+                  "img": {
+                    "type": "string",
+                    "description": "Path of card image"
+                  },
+                  "rarity": {
+                    "type": "integer",
+                    "format": "int64",
+                    "description": "Rarity of the card"
+                  },
+                  "artist": {
+                    "type": "string",
+                    "description": "Artist of card image"
+                  },
+                  "shiny": {
+                    "type": "boolean",
+                    "description": "Is the card shiny or not"
+                  },
+                  "series": {
+                    "type": "integer",
+                    "format": "int64",
+                    "description": "Series the card is a part of"
+                  }
+                }
               }
             }
           }
@@ -605,6 +668,10 @@
         "responses": {
           "201": {
             "description": "Sucess",
+            "content": {}
+          },
+          "400": {
+            "description": "Malformed payload",
             "content": {}
           }
         }
@@ -650,6 +717,10 @@
                   "name": {
                     "type": "string",
                     "description": "New Series"
+                  },
+                  "card_back": {
+                    "type": "string",
+                    "description": "Path to card back"
                   }
                 }
               }
@@ -659,6 +730,10 @@
         "responses": {
           "201": {
             "description": "Success",
+            "content": {}
+          },
+          "400": {
+            "description": "Malformed payload",
             "content": {}
           }
         }
@@ -687,13 +762,72 @@
             "content": {
               "application/json": {
                 "schema": {
+                  "$ref": "#/components/schemas/Series"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/announcement": {
+      "get": {
+        "tags": [
+          "Announcement"
+        ],
+        "description": "Get all announcements",
+        "operationId": "getAnnouncements",
+        "responses": {
+          "200": {
+            "description": "The Announcements",
+            "content": {
+              "application/json": {
+                "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Series"
+                    "$ref": "#/components/schemas/Annoucement"
                   }
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/announcement/new": {
+      "post": {
+        "tags": [
+          "Announcement"
+        ],
+        "description": "Post new announcement",
+        "operationId": "newAnnouncement",
+        "requestBody": {
+          "description": "New Announcement",
+          "content": {
+            "application/json": {
+              "schema": {
+                "properties": {
+                  "title": {
+                    "type": "string",
+                    "description": "Announcement Title"
+                  },
+                  "body": {
+                    "type": "string",
+                    "description": "Announcement Body"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Success",
+            "content": {}
+          },
+          "400": {
+            "description": "Malformed payload",
+            "content": {}
           }
         }
       }
@@ -791,9 +925,35 @@
             "type": "string",
             "description": "Series Name"
           },
+          "card_back": {
+            "type": "string",
+            "description": "Path to card back for series"
+          },
           "create_ts": {
             "type": "string",
             "description": "Series creation timestamp"
+          }
+        }
+      },
+      "Annoucement": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64",
+            "description": "Announcement ID"
+          },
+          "title": {
+            "type": "string",
+            "description": "title of announcement"
+          },
+          "date": {
+            "type": "string",
+            "description": "Timestamp of announcement"
+          },
+          "body": {
+            "type": "string",
+            "description": "Body of announcement"
           }
         }
       }
@@ -815,6 +975,10 @@
     {
       "name": "Series",
       "description": "Series Management"
+    },
+    {
+      "name": "Announcement",
+      "description": "Announcement management"
     }
   ]
 }
